--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "ionicons": "3.0.0",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.4.0",
-        "zone.js": "^0.8.4"
+        "zone.js": "^0.8.4",
+        "cordova-plugin-googlemaps": "^2.1.1",
+        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.0",
@@ -61,7 +63,11 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_ANDROID": "AIzaSyAVjg3Ir9B_tbGr4a4Lt00LFUz2irioB6I",
+                "API_KEY_FOR_IOS": "AIzaSyABCWm95VWDD95GZ2Q_BU8JCxnpaIvh0Hg"
+            }
         },
         "platforms": [
             "android"
