--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
-  "name": "VehiCargo",
+  "name": "vehi-cargo",
   "integrations": {
     "cordova": {}
   },
-  "type": "VehiCargo"
+  "type": "ionic-angular",
+  "app_id": ""
 }
