--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@angular/platform-browser-dynamic": "4.0.0",
     "@ionic-native/core": "^3.14.0",
     "@ionic-native/google-maps": "^4.9.1",
+    "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
     "cordova-android": "^6.2.3",
+    "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googlemaps": "^2.3.8",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-nativegeocoder": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.0.0",
     "ionicons": "3.0.0",
@@ -72,10 +76,13 @@
         "API_KEY_FOR_IOS": "AIzaSyABCWm95VWDD95GZ2Q_BU8JCxnpaIvh0Hg",
         "PLAY_SERVICES_VERSION": "15.0.1",
         "ANDROID_SUPPORT_V4_VERSION": "26.1.0"
-      }
+      },
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
