--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.1.3",
     "cordova-android": "^6.2.3",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.2",
