--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "^3.14.0",
     "@ionic-native/google-maps": "^4.9.1",
     "@ionic-native/native-geocoder": "^4.11.0",
+    "@ionic-native/network": "^4.11.0",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "^2.1.3",
@@ -35,6 +36,7 @@
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-nativegeocoder": "^3.1.2",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -83,7 +85,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "26.1.0"
       },
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-nativegeocoder": {}
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android",
