--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "4.0.0",
     "@ionic-native/core": "^3.14.0",
     "@ionic-native/google-maps": "^4.9.1",
+    "@ionic-native/image-picker": "^4.11.0",
     "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/network": "^4.11.0",
     "@ionic-native/splash-screen": "3.4.2",
@@ -39,6 +40,7 @@
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^3.9.0",
     "ionic-angular": "3.0.0",
@@ -86,7 +88,10 @@
       },
       "cordova-plugin-statusbar": {},
       "cordova-plugin-nativegeocoder": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "proof upload"
+      }
     },
     "platforms": [
       "android",
